--- a/distributor.html
+++ b/distributor.html
@@ -30,7 +30,7 @@ textarea { resize: none; }
 var active = 11;
 var strong = 2;
 var indices = 137;
-var cell  = [15, 44, 104, 118, 45, 34, 42, 74, 145, 122, 139, 87, 68, 110, 8, 164, 17, 27, 77, 124, 86, 100, 71, 33, 76, 56, 32, 75, 21, 101, 7, 62, 40, 93, 125, 72, 92, 53, 69, 65, 146, 116, 61, 113, 137, 95, 140, 91, 30, 97, 49, 37, 102, 54, 119, 107, 55, 153, 43, 160, 60, 5, 151, 111, 112, 121, 103, 57, 89, 149, 78, 161, 126, 31, 135, 131, 123, 150, 98, 4, 163, 109, 115, 133, 83, 141, 162, 52, 19, 36, 127, 80, 64, 148, 114, 58, 134, 120, 22, 128, 81, 16, 28, 23, 136, 73, 108, 99, 47, 138, 29, 90, 105, 96, 79, 94, 88, 106, 50, 46, 18, 70, 152, 6, 147, 48, 82, 85, 66, 35, 132, 20, 63, 67, 84, 59, 41];
+var cell  = [6, 110, 106, 68, 49, 124, 46, 161, 83, 119, 114, 31, 125, 98, 104, 122, 116, 40, 69, 148, 54, 18, 150, 88, 153, 4, 92, 15, 43, 107, 120, 70, 118, 164, 149, 7, 62, 140, 100, 115, 77, 28, 111, 112, 67, 5, 136, 126, 101, 65, 60, 22, 45, 134, 56, 152, 74, 19, 47, 50, 84, 139, 63, 75, 58, 53, 71, 105, 21, 131, 42, 80, 52, 82, 146, 76, 95, 97, 30, 41, 86, 81, 33, 36, 27, 57, 135, 55, 89, 123, 102, 108, 133, 121, 91, 90, 73, 87, 61, 137, 96, 17, 32, 145, 79, 44, 66, 93, 59, 78, 132, 138, 127, 29, 99, 85, 20, 16, 8, 162, 128, 160, 94, 141, 163, 35, 48, 72, 64, 109, 23, 151, 34, 113, 147, 103, 37];
 var index = 0;
 var timer = null;
 var running  = true;
@@ -188,10 +188,10 @@ window.onload = function ()
         <div align="center">
         <h3>Twitch Distributor Visualization</h3>
         <i>Copyright&copy; 2018 Jonathan D. Lettvin, All Rights Reserved.</i>
+        <br /><span id="buttons"></span>
         <br /><textarea id="info" rows="7" cols="82" readonly>
-        Click the buttons under here to fill this area with information.
+        Click the above buttons to fill this area with information.
         </textarea><br />
-        <span id="buttons"></span>
         <table><caption align="bottom"><h3>Muscle Fiber Bundle Cross Section</h3></caption>
 <td colspan="13" bgcolor="black"><button id="pause" onclick="eRun(event)">STOP</button> Click here to observe active distribution (or pause)</td><tr><td colspan="13">tonus<h2 id="state">None</h2></td>
 </tr><tr><td></td><td></td><td></td><td></td><td class="i4" style="color:white;" bgcolor="#552222">0<br /><br />(-2,+6)</td><td class="i5" style="color:white;" bgcolor="#552222">1<br /><br />(-1,+6)</td><td class="i6" style="color:white;" bgcolor="#552222">2<br /><br />(+0,+6)</td><td class="i7" style="color:white;" bgcolor="#552222">3<br /><br />(+1,+6)</td><td class="i8" style="color:white;" bgcolor="#552222">4<br /><br />(+2,+6)</td><td></td><td></td><td></td><td></td>
