Improved text info delivery

--- a/distributor.html
+++ b/distributor.html
@@ -13,13 +13,14 @@ body {
 	font-variant: normal;
 	font-weight: 200;
 	line-height: 10px;
+        background-color: #ffffcc;
 }
 h3 {
     font-size: 20px;
 }
 table, th, td {
-	border: 1px solid black;
-	border-collapse: collapse;
+	/* border: 1px solid black;
+	border-collapse: collapse; */
 	vertical-align: middle;
 	text-align: center;
 }
@@ -30,7 +31,7 @@ textarea { resize: none; }
 var active = 11;
 var strong = 2;
 var indices = 137;
-var cell  = [92, 119, 55, 153, 80, 85, 45, 116, 88, 43, 96, 27, 146, 83, 6, 70, 121, 90, 52, 98, 49, 101, 135, 29, 87, 60, 58, 163, 109, 148, 122, 86, 114, 18, 107, 139, 118, 151, 81, 21, 102, 97, 54, 68, 15, 91, 82, 62, 44, 59, 19, 77, 71, 17, 160, 7, 106, 100, 28, 120, 8, 79, 84, 136, 124, 127, 67, 132, 35, 113, 115, 103, 131, 66, 123, 108, 72, 89, 48, 56, 141, 33, 42, 23, 125, 40, 69, 162, 4, 138, 64, 128, 94, 147, 53, 46, 152, 37, 75, 149, 105, 32, 16, 140, 112, 47, 50, 73, 65, 30, 78, 5, 22, 111, 145, 161, 74, 126, 95, 34, 63, 133, 150, 36, 31, 61, 137, 20, 93, 57, 134, 41, 110, 164, 99, 104, 76];
+var cell  = [47, 22, 120, 37, 61, 112, 30, 62, 64, 74, 136, 56, 113, 95, 153, 49, 57, 81, 150, 140, 134, 53, 131, 164, 20, 161, 36, 76, 82, 99, 108, 43, 133, 44, 75, 52, 135, 7, 23, 71, 8, 68, 107, 33, 128, 94, 15, 93, 163, 90, 63, 118, 31, 34, 58, 109, 101, 50, 88, 114, 151, 73, 111, 19, 92, 69, 54, 123, 17, 110, 29, 106, 121, 149, 32, 115, 27, 21, 127, 132, 77, 87, 45, 28, 72, 85, 59, 6, 126, 139, 42, 122, 89, 78, 55, 66, 98, 86, 18, 5, 67, 60, 137, 104, 105, 4, 80, 65, 40, 162, 141, 79, 84, 124, 146, 125, 91, 160, 152, 16, 138, 97, 100, 116, 35, 83, 96, 147, 102, 70, 46, 119, 41, 103, 48, 145, 148];
 var index = 0;
 var timer = null;
 var running  = true;
