--- a/distributor.html
+++ b/distributor.html
@@ -29,7 +29,7 @@ textarea { resize: none; }
 var active = 11;
 var strong = 2;
 var indices = 137;
-var cell  = [149, 115, 42, 89, 99, 40, 37, 35, 106, 63, 58, 152, 6, 134, 122, 69, 97, 7, 19, 135, 84, 123, 132, 54, 116, 57, 27, 77, 148, 29, 108, 98, 96, 131, 147, 138, 105, 52, 56, 46, 109, 8, 113, 68, 102, 15, 101, 23, 107, 88, 60, 73, 163, 151, 43, 31, 61, 33, 137, 141, 78, 95, 22, 50, 145, 81, 120, 121, 71, 128, 21, 110, 28, 112, 92, 18, 79, 62, 87, 111, 85, 16, 72, 4, 80, 162, 93, 119, 104, 153, 30, 161, 118, 125, 75, 90, 160, 150, 76, 20, 5, 70, 74, 100, 124, 140, 32, 103, 17, 146, 55, 45, 127, 49, 65, 47, 64, 59, 44, 48, 136, 82, 139, 91, 83, 86, 34, 36, 126, 53, 164, 67, 41, 94, 114, 66, 133];
+var cell  = [121, 32, 120, 36, 116, 112, 118, 146, 82, 136, 34, 100, 35, 109, 45, 16, 153, 80, 139, 46, 110, 49, 134, 6, 68, 48, 164, 113, 131, 4, 44, 50, 22, 88, 97, 58, 30, 75, 123, 95, 67, 85, 96, 86, 41, 70, 18, 99, 102, 81, 8, 60, 29, 17, 31, 138, 56, 66, 161, 72, 19, 151, 74, 21, 62, 137, 27, 163, 63, 76, 147, 64, 91, 47, 54, 104, 83, 79, 23, 15, 125, 57, 59, 93, 7, 119, 40, 160, 77, 52, 73, 115, 111, 140, 150, 98, 53, 128, 162, 126, 42, 20, 124, 33, 87, 90, 105, 28, 149, 114, 106, 78, 152, 69, 107, 141, 43, 148, 135, 55, 122, 133, 127, 108, 5, 132, 84, 71, 92, 61, 37, 103, 145, 89, 65, 94, 101];
 var index = 0;
 var timer = null;
 var running  = true;
@@ -74,7 +74,7 @@ function makeButtons (names)
     for (name of names)
     {
         var id = 'button' + i++;
-        text += '<button id="' + id + '" onmouseover="eButton(event)">' +                 name +                 '</button>';
+        text += '<button id="' + id +                 '" onmouseover="eButton(event)"' +                 '" onclick="eButton(event)"' +                 '>' +                 name +                 '</button>';
     }
     var element = document.getElementById ('buttons');
     element.innerHTML = text;
@@ -185,14 +185,14 @@ window.onload = function ()
 	</head>
 	<body>
         <div align="center">
-        <h1>Twitch Distributor Visualization</h1>
+        <h1><u>Twitch Distributor Visualization</u></h1>
         <i>Copyright&copy; 2018 Jonathan D. Lettvin, All Rights Reserved.</i>
         <br /><span id="buttons"></span>
         <br /><textarea id="info" rows="7" cols="84" readonly>
         Hover over the above buttons to fill this area with information.
         </textarea><br />
         <table><caption align="bottom"><h3>Muscle Fiber Bundle Cross Section</h3></caption>
-<td colspan="13" bgcolor="black"><button id="pause" onclick="eRun(event)">STOP</button> Click here to observe active distribution (or pause)</td><tr><td colspan="13" bgcolor="#333333">tonus<h3 id="state">None</h3></td>
+<td colspan="11" bgcolor="black"><button id="pause" onclick="eRun(event)">STOP</button> Click here to observe active distribution (or pause)</td><td colspan="2" bgcolor="#333333">tonus<h3 id="state">None</h3></td>
 </tr><tr><td></td><td></td><td></td><td></td><td class="i4" style="color:white;" bgcolor="#552222">0<br /><br />(-2,+6)</td><td class="i5" style="color:white;" bgcolor="#552222">1<br /><br />(-1,+6)</td><td class="i6" style="color:white;" bgcolor="#552222">2<br /><br />(+0,+6)</td><td class="i7" style="color:white;" bgcolor="#552222">3<br /><br />(+1,+6)</td><td class="i8" style="color:white;" bgcolor="#552222">4<br /><br />(+2,+6)</td><td></td><td></td><td></td><td></td>
 </tr><tr><td></td><td></td><td class="i15" style="color:white;" bgcolor="#552222">5<br /><br />(-4,+5)</td><td class="i16" style="color:white;" bgcolor="#552222">6<br /><br />(-3,+5)</td><td class="i17" style="color:white;" bgcolor="#552222">7<br /><br />(-2,+5)</td><td class="i18" style="color:white;" bgcolor="#552222">8<br /><br />(-1,+5)</td><td class="i19" style="color:white;" bgcolor="#552222">9<br /><br />(+0,+5)</td><td class="i20" style="color:white;" bgcolor="#552222">10<br /><br />(+1,+5)</td><td class="i21" style="color:white;" bgcolor="#552222">11<br /><br />(+2,+5)</td><td class="i22" style="color:white;" bgcolor="#552222">12<br /><br />(+3,+5)</td><td class="i23" style="color:white;" bgcolor="#552222">13<br /><br />(+4,+5)</td><td></td><td></td>
 </tr><tr><td></td><td class="i27" style="color:white;" bgcolor="#552222">14<br /><br />(-5,+4)</td><td class="i28" style="color:white;" bgcolor="#552222">15<br /><br />(-4,+4)</td><td class="i29" style="color:white;" bgcolor="#552222">16<br /><br />(-3,+4)</td><td class="i30" style="color:white;" bgcolor="#552222">17<br /><br />(-2,+4)</td><td class="i31" style="color:white;" bgcolor="#552222">18<br /><br />(-1,+4)</td><td class="i32" style="color:white;" bgcolor="#552222">19<br /><br />(+0,+4)</td><td class="i33" style="color:white;" bgcolor="#552222">20<br /><br />(+1,+4)</td><td class="i34" style="color:white;" bgcolor="#552222">21<br /><br />(+2,+4)</td><td class="i35" style="color:white;" bgcolor="#552222">22<br /><br />(+3,+4)</td><td class="i36" style="color:white;" bgcolor="#552222">23<br /><br />(+4,+4)</td><td class="i37" style="color:white;" bgcolor="#552222">24<br /><br />(+5,+4)</td><td></td>
