--- a/distributor.html
+++ b/distributor.html
@@ -29,7 +29,7 @@ textarea { resize: none; }
 var active = 11;
 var strong = 2;
 var indices = 137;
-var cell  = [121, 32, 120, 36, 116, 112, 118, 146, 82, 136, 34, 100, 35, 109, 45, 16, 153, 80, 139, 46, 110, 49, 134, 6, 68, 48, 164, 113, 131, 4, 44, 50, 22, 88, 97, 58, 30, 75, 123, 95, 67, 85, 96, 86, 41, 70, 18, 99, 102, 81, 8, 60, 29, 17, 31, 138, 56, 66, 161, 72, 19, 151, 74, 21, 62, 137, 27, 163, 63, 76, 147, 64, 91, 47, 54, 104, 83, 79, 23, 15, 125, 57, 59, 93, 7, 119, 40, 160, 77, 52, 73, 115, 111, 140, 150, 98, 53, 128, 162, 126, 42, 20, 124, 33, 87, 90, 105, 28, 149, 114, 106, 78, 152, 69, 107, 141, 43, 148, 135, 55, 122, 133, 127, 108, 5, 132, 84, 71, 92, 61, 37, 103, 145, 89, 65, 94, 101];
+var cell  = [34, 98, 68, 53, 105, 54, 77, 73, 162, 71, 113, 6, 79, 35, 95, 60, 47, 147, 30, 69, 64, 7, 96, 65, 111, 80, 161, 138, 50, 122, 17, 63, 46, 75, 123, 100, 103, 131, 62, 109, 97, 101, 139, 67, 119, 32, 74, 164, 19, 92, 163, 76, 87, 94, 148, 36, 16, 18, 145, 106, 150, 140, 136, 22, 115, 52, 99, 93, 56, 132, 23, 126, 85, 44, 89, 40, 5, 141, 104, 114, 29, 128, 84, 107, 72, 33, 152, 28, 102, 49, 121, 15, 83, 149, 70, 146, 43, 42, 124, 90, 81, 20, 48, 37, 160, 127, 88, 112, 110, 31, 153, 151, 55, 59, 133, 134, 61, 57, 86, 45, 27, 91, 41, 21, 116, 66, 108, 58, 118, 78, 120, 125, 135, 8, 82, 4, 137];
 var index = 0;
 var timer = null;
 var running  = true;
@@ -153,7 +153,8 @@ twitch unit duty cycle timing requirements are satisfied.\n\
 This strategy guarantees maximum recovery time for all muscle fibers.\n\
 The illustration below shows this behavior.\n\
 The code driving this image is logically equivalent to\n\
-the proposed pre-randomized sampling of a regular pattern.\
+the proposed pre-randomized sampling of a regular pattern.\n\
+Twitch is "all or none": tonus measures average twitches per unit time.\
 ';
 
     document.distributor['Conclusions'] = '\
@@ -192,7 +193,7 @@ window.onload = function ()
         Hover over the above buttons to fill this area with information.
         </textarea><br />
         <table><caption align="bottom"><h3>Muscle Fiber Bundle Cross Section</h3></caption>
-<td colspan="11" bgcolor="black"><button id="pause" onclick="eRun(event)">STOP</button> Click here to observe active distribution (or pause)</td><td colspan="2" bgcolor="#333333">tonus<h3 id="state">None</h3></td>
+<td colspan="11" bgcolor="black"><button id="pause" onclick="eRun(event)">STOP</button> Click here to observe active distribution or <button id="reload" onclick="location.reload (true)">reload</button></td><td colspan="2" bgcolor="#333333">tonus<h3 id="state">None</h3></td>
 </tr><tr><td></td><td></td><td></td><td></td><td class="i4" style="color:white;" bgcolor="#552222">0<br /><br />(-2,+6)</td><td class="i5" style="color:white;" bgcolor="#552222">1<br /><br />(-1,+6)</td><td class="i6" style="color:white;" bgcolor="#552222">2<br /><br />(+0,+6)</td><td class="i7" style="color:white;" bgcolor="#552222">3<br /><br />(+1,+6)</td><td class="i8" style="color:white;" bgcolor="#552222">4<br /><br />(+2,+6)</td><td></td><td></td><td></td><td></td>
 </tr><tr><td></td><td></td><td class="i15" style="color:white;" bgcolor="#552222">5<br /><br />(-4,+5)</td><td class="i16" style="color:white;" bgcolor="#552222">6<br /><br />(-3,+5)</td><td class="i17" style="color:white;" bgcolor="#552222">7<br /><br />(-2,+5)</td><td class="i18" style="color:white;" bgcolor="#552222">8<br /><br />(-1,+5)</td><td class="i19" style="color:white;" bgcolor="#552222">9<br /><br />(+0,+5)</td><td class="i20" style="color:white;" bgcolor="#552222">10<br /><br />(+1,+5)</td><td class="i21" style="color:white;" bgcolor="#552222">11<br /><br />(+2,+5)</td><td class="i22" style="color:white;" bgcolor="#552222">12<br /><br />(+3,+5)</td><td class="i23" style="color:white;" bgcolor="#552222">13<br /><br />(+4,+5)</td><td></td><td></td>
 </tr><tr><td></td><td class="i27" style="color:white;" bgcolor="#552222">14<br /><br />(-5,+4)</td><td class="i28" style="color:white;" bgcolor="#552222">15<br /><br />(-4,+4)</td><td class="i29" style="color:white;" bgcolor="#552222">16<br /><br />(-3,+4)</td><td class="i30" style="color:white;" bgcolor="#552222">17<br /><br />(-2,+4)</td><td class="i31" style="color:white;" bgcolor="#552222">18<br /><br />(-1,+4)</td><td class="i32" style="color:white;" bgcolor="#552222">19<br /><br />(+0,+4)</td><td class="i33" style="color:white;" bgcolor="#552222">20<br /><br />(+1,+4)</td><td class="i34" style="color:white;" bgcolor="#552222">21<br /><br />(+2,+4)</td><td class="i35" style="color:white;" bgcolor="#552222">22<br /><br />(+3,+4)</td><td class="i36" style="color:white;" bgcolor="#552222">23<br /><br />(+4,+4)</td><td class="i37" style="color:white;" bgcolor="#552222">24<br /><br />(+5,+4)</td><td></td>
