--- a/distributor.html
+++ b/distributor.html
@@ -29,7 +29,7 @@ textarea { resize: none; }
 var active = 11;
 var strong = 2;
 var indices = 137;
-var cell  = [75, 62, 41, 68, 122, 145, 36, 81, 58, 80, 97, 136, 72, 61, 104, 115, 47, 88, 74, 149, 133, 111, 46, 121, 29, 8, 79, 138, 6, 85, 112, 20, 106, 82, 63, 56, 5, 30, 53, 21, 131, 116, 162, 99, 64, 69, 146, 95, 118, 70, 107, 35, 100, 76, 55, 66, 92, 134, 27, 109, 32, 65, 102, 54, 83, 140, 60, 147, 49, 127, 161, 86, 42, 91, 73, 50, 137, 119, 23, 40, 31, 7, 128, 108, 48, 93, 59, 19, 18, 16, 84, 67, 132, 4, 120, 101, 57, 98, 71, 153, 45, 123, 160, 17, 43, 164, 139, 89, 126, 28, 163, 78, 103, 150, 114, 113, 37, 110, 33, 52, 148, 125, 15, 22, 90, 77, 87, 124, 135, 152, 141, 105, 34, 94, 151, 44, 96];
+var cell  = [109, 55, 37, 77, 106, 78, 107, 58, 20, 19, 66, 41, 30, 104, 86, 105, 27, 57, 153, 82, 152, 50, 64, 131, 76, 164, 103, 88, 31, 99, 90, 49, 45, 113, 52, 138, 46, 7, 91, 33, 22, 65, 118, 162, 94, 124, 70, 34, 69, 134, 98, 112, 150, 61, 127, 73, 100, 108, 23, 126, 15, 135, 16, 18, 6, 163, 17, 116, 137, 102, 63, 149, 87, 125, 136, 62, 43, 83, 119, 48, 128, 121, 96, 145, 59, 47, 89, 5, 115, 151, 28, 110, 72, 68, 71, 4, 132, 21, 35, 75, 29, 85, 92, 79, 141, 139, 97, 133, 56, 53, 67, 111, 122, 42, 148, 123, 120, 147, 114, 81, 146, 36, 8, 101, 54, 84, 74, 32, 60, 80, 40, 93, 160, 95, 140, 44, 161];
 var index = 0;
 var timer = null;
 var running  = true;
@@ -52,7 +52,7 @@ function eRun (e)
     if (running) { timer = setInterval (loop, interval); }
     else         { clearInterval (timer); timer = null;  }
     var button = document.getElementById ("pause");
-    button.innerHTML = running ? "STOP" : "RUN";
+    button.innerHTML = running ? "BLOCK" : "START";
 }
 
 function reColor (className,scheme)
